[package]

name          = "flac"
version       = "0.1.0"
description   = "An implementation of FLAC (free lossless audio codec)"
license       = "BSD-3-Clause"
authors       = ["Jeremy Hull <sourdrums@gmail.com>"]
readme        = "README.md"
documentation = "https://sourrust.github.io/flac"
repository    = "https://github.com/sourrust/flac"

[dependencies]

docopt          = "^0.6.78"
hound           = "^1.1.0"
nom             = "^1.0.0"
rustc-serialize = "^0.3.16"

[dev-dependencies]

rust-crypto = "^0.2.34"
