[package]

name          = "flac"
version       = "0.5.0"
description   = "An implementation of FLAC (free lossless audio codec)"
license       = "BSD-3-Clause"
authors       = ["Jeremy Hull <sourdrums@gmail.com>"]
readme        = "README.md"
documentation = "https://sourrust.github.io/flac"
repository    = "https://github.com/sourrust/flac"
keywords      = ["audio", "codec", "flac"]

[dependencies]

nom             = "^1.0.0"

[dev-dependencies]

docopt          = "^0.6.78"
hound           = "^1.1.0"
rust-crypto = "^0.2.34"
rustc-serialize = "^0.3.16"
